<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="finalcourseassignment.ufrj.android_lunar.MainActivity"
    android:orientation="vertical">

    <Chronometer
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:id="@+id/chronometer"
        android:textSize="20dp"
        android:layout_marginTop="20dp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/tv_accelerometer"
        android:textSize="20dp"
        android:layout_marginTop="20dp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_accelerometer_X"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:gravity="left"
            android:layout_marginLeft="10dp"
            android:text="X:"/>

        <TextView
            android:id="@+id/tv_accelerometer_Y"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:gravity="center"
            android:text="Y:"/>

        <TextView
            android:id="@+id/tv_accelerometer_Z"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:layout_marginRight="10dp"
            android:textColor="@android:color/black"
            android:text="Z:"/>
    </LinearLayout>


    <Button
        android:id="@+id/btn_activate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:minHeight="@dimen/demo_button_min_height"
        android:minWidth="@dimen/demo_button_min_width"
        android:text="@string/btn_activate"
        android:textSize="30sp"
        android:textColor="@android:color/white"
        android:background="@android:color/background_dark"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_filename"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textSize="30sp"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:gravity="left"
            android:layout_marginLeft="10dp"
            android:text="@string/tv_output_filename"/>

        <EditText
            android:id="@+id/et_filename"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:gravity="center"
            android:hint="@string/et_output_filename"/>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_pothole"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginTop="30sp"
            android:minHeight="@dimen/demo_button_min_height"
            android:minWidth="@dimen/demo_button_min_width"
            android:text="@string/btn_pothole"
            android:textSize="30sp"
            android:textColor="@android:color/white"
            android:background="@android:color/background_dark"/>

        <Button
            android:id="@+id/btn_speedbump"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginTop="50sp"
            android:minHeight="@dimen/demo_button_min_height"
            android:minWidth="@dimen/demo_button_min_width"
            android:text="@string/btn_speedbump"
            android:textSize="30sp"
            android:textColor="@android:color/white"
            android:background="@android:color/background_dark"/>

    </LinearLayout>

</LinearLayout>
